@@ -13,6 +13,8 @@ UTILITIES
     o enable the compression modes "LZMA.ultra", "LZMA.ultra_max",
       "LZMA_RA.ultra" and "LZMA_RA.ultra_max"
 
+    o show more compression information in `system.gds()`
+
 
 CHANGES IN VERSION 1.14.0-1.14.1
 -------------------------
